kube/monitoring/victoriametrics/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: syslog-tcp-gateway
  namespace: monitoring
spec:
  gatewayClassName: traefik
  listeners:
    - name: syslog-tcp
      protocol: TCP
      port: 514
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: syslog-tcp-route
  namespace: monitoring
spec:
  parentRefs:
    - name: syslog-tcp-gateway
      namespace: monitoring
      kind: Gateway
      sectionName: syslog-tcp
      group: "gateway.networking.k8s.io"
  rules:
    - backendRefs:
        - name: vlagent-vmks
          port: 514
          kind: Service
          group: ""
          weight: 1
